# smartref

./: .travis.yml  Abstract.md  CMakeLists.txt  LICENSE  README.md  Submission checklist.md  conanfile.py  counter.cpp  counter.h  delegation.cpp  foo.h  foobar.h  main.cpp  meta.h  reflection.cpp  reflection.h  unified_call_syntax.cpp  using.h
examples/: foobar.h  operator_assignment.cpp  sandbox.cpp  smartref.cpp  stdlibs_for_debugging.h  ufcs.cpp  unified_call_syntax.cpp
experiments/: adl_ufcs.cpp  auto_binder.cpp  is_member_function.cpp  json.cpp  unified_call_syntax.cpp  unified_call_syntax_v2.cpp
include/reflection/: reflect.h  reflect_auto.h  reflectable.h  reflection.h  reflectors.h  reify.h
include/smartref/: members.h  operators.h  smartref.h  stl.h
include/utils/: utils.h
src/: counter.h  reflection.h  reflection_common.h  reflection_intrusive.h  reflection_nonintrusive.h  smartref.h  using.h  utils.h
src/reflection/: reflect.h  reflect_auto.h  reflect_members.h  reflectable.h  reflectable_common.h  reflectable_intrusive.h  reflectable_nonintrusive.h  reflection.h  reify.h
src/smartref/: explicit.h  implicit.h  members.h  smartref.h  stl.h
src/utils/: counter.h  cpp17.h  utils.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: reflection.cpp  reflection_common.cpp  reflection_intrusive.cpp  reflection_nonintrusive.cpp
tests/reflection/: reflect.cpp  reflect_auto.cpp  reflect_members.cpp  reflect_operators.cpp  reflectable.cpp  reflectable_common.cpp  reflectable_intrusive.cpp  reflectable_nonintrusive.cpp  reflection.cpp  reflectors.cpp  reify.cpp
tests/smartref/: explicit.cpp  implicit.cpp  member_functions.cpp  member_types.cpp  members.cpp  operators.cpp  smartref.cpp  stl.cpp
tests/smartref/fundamental/: assignment_operator.cpp
tests/smartref/members/: member_functions.cpp  member_types.cpp
tests/smartref/stl_support/: containers.cpp
tests/utils/: counter.cpp  cpp17.cpp  utils.cpp
tools/: singlify.py
